--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>iRacing Table</title>
- <!--   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css"> -->
 </head>
 <style>
 .text {
@@ -19,6 +16,13 @@ table, th, td {
 </style>
 <body>
 {% block content %}
+<form action="" method="post">
+        <p>
+	    <label for="id">Enter your <a href="https://members.iracing.com/membersite/account/MyInfo.do">Customer ID</a>:</label>
+	    <input type="text" name="id">
+	    <input type="submit" value="Add">
+	</p>
+</form>
 <table id="data">
     <tr>
         <th>Name</th>
@@ -37,6 +41,7 @@ table, th, td {
         <th>Dirt Road License</th>
         <th>Dirt Road SR</th>
         <th>Dirt Road iR</th>
+        <th>Profile stats</th>
     </tr>
     {% for driver in drivers %}
     <tr>
@@ -111,15 +116,10 @@ table, th, td {
         <td bgcolor="{{ bg_color }}">{{ driver.DirtRoadLicense }}</td>
         <td>{{ driver.DirtRoadSR }}</td>
         <td>{{ driver.DirtRoadiR }}</td>
+        <td><a href="https://irstats.net/driver/{{ driver.id }}">Profile</a></td>
     </tr>
     {% endfor %}
 </table>
 {% endblock %}
-
-<script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
-<script type="text/javascript" charset="utf8"
-        src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
-
 </body>
 </html>
